# tamagawa_to_z

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_precompute_fix.py  test_regex_fix.py  水域タグ除外フィルター調査報告書.md
.llm_root_cache/: cache.db  cache.db-shm  cache.db-wal
actions/: plan_2025-06-19_21-33-50.yaml
config/: README.md  region_data_paths.yaml  regions.yaml  run_meta.yaml
configs/: analyze_site.yaml  dataset_split.yaml  optuna_space.yaml  researcher.yml
data/dict/: toponym_dict.csv  toponym_dict_backup_20250618_144233.csv  toponym_dict_backup_20250618_145127.csv  toponym_dict_backup_20250618_145137.csv  toponym_dict_backup_20250618_150416.csv  toponym_dict_backup_20250618_150420.csv  toponym_dict_backup_20250618_150953.csv  toponym_dict_backup_20250618_150957.csv  toponym_dict_backup_20250618_151714.csv  toponym_dict_backup_20250618_151718.csv  toponym_dict_backup_20250618_153925.csv  toponym_dict_backup_20250618_153929.csv  toponym_dict_backup_20250618_155525.csv  toponym_dict_backup_20250618_155528.csv  toponym_dict_backup_20250618_155614.csv  toponym_dict_backup_20250618_155618.csv  toponym_dict_backup_20250618_155718.csv  toponym_dict_backup_20250618_155722.csv  toponym_dict_backup_20250618_155950.csv  toponym_dict_backup_20250618_155955.csv
data/output/candidate_ranking/candidate_ranking_20250627_142705/: candidate_ranking_acre.csv
data/output/candidates/: acre_candidates.csv
data/output/inspector_reports/2025-06-19_13-01-51/: plan_4d7fac8c.yaml  report_4d7fac8c.md  results_4d7fac8c.json
data/output/inspector_reports/2025-06-24_15-42-20/: report_38f89797.md
data/output/optuna/20250625_170550/: best_params.json  optimization_history.json
data/output/research_reports/2025-06-26_16-43-01/: research_plan_2025-06-26.yaml
data/plots/best_params_20250625_150412/: best_run_20250625_150412_visualization.csv
docs/: notebook_user_guide.md  similarity_analysis_usage.md
flows/: __init__.py  research_flow.py
notebooks/: 00_presentation.html  00_presentation.ipynb  01_harmonizer.ipynb  02_harmonize_research.ipynb  02_hydro_da.ipynb  02_review_and_prompt.ipynb  99_kaggle_demo.ipynb
notebooks/archive/: 01_harmonizer.ipynb  02_harmonize_research.ipynb  03_research_review.ipynb
notebooks/smapshot_html/: 02_harmonize_research.html
scripts/: README.md  create_google_maps_visualization.py  create_kmz_export.py  create_leaflet_visualization.py  create_sample_known_sites.py  kmz_to_csv.py  run_analyze_site.py  run_best_params.py  run_harmonizer.py  run_harmonizer.sh  run_inspector.py  run_optuna.py  run_researcher.py  run_root_extraction.py  run_similarity_analysis.py  run_site_identification.py  run_split.py  test_llm_harmonizer.py  test_optimized_optuna.py  test_watermask.py
src/: cli.py
src/tamagawa-to-z/: __init__.py
src/tamagawa-to-z/agents/: agents.py
src/tamagawa-to-z/harmonizer/: __init__.py  agent.py  preprocess.py  watermask.py
src/tamagawa-to-z/morph_da/: __init__.py
src/tamagawa-to-z/utils/: io.py  viz.py
src/tamagawa_to_z/: __init__.py  cli.py
src/tamagawa_to_z/agents/: __init__.py  agent_manager.py
src/tamagawa_to_z/config/: __init__.py  region_config.py
src/tamagawa_to_z/dataset/: __init__.py  buffers.py  splitter.py
src/tamagawa_to_z/harmonizer/: __init__.py  agent.py  cluster.py  distance.py  embed.py  harmonizer.py  preprocess.py  watermask.py  watermask_safe.py
src/tamagawa_to_z/harmonizer/llm_layer/: __init__.py  agent_schema.py  dictionary_io.py  embedding.py  harmonize.py  root_io.py
src/tamagawa_to_z/hydro_da/: __init__.py  hydraulics_da.py
src/tamagawa_to_z/inspector_agent/: __init__.py  agent.py  agent_schema.py  metrics.py
src/tamagawa_to_z/inspector_agent/templates/: report_md.jinja
src/tamagawa_to_z/morph_da/: morph_da.py
src/tamagawa_to_z/researcher_agent/: __init__.py  agent.py  evaluator.py  feature_extractor.py  formatter.py  generator.py  loader.py  optimization_analyzer.py  optimization_analyzer_v2.py  rca.py  scorer.py
src/tamagawa_to_z/researcher_agent/schemas/: optimization_schema.py
src/tamagawa_to_z/site_analysis/: __init__.py  csv_exporter.py  polar_converter.py  river_distance.py  similarity_analyzer.py  site_clusterer.py  toponym_extractor.py
src/tamagawa_to_z/tuning/: __init__.py  history_summarizer.py  llm_root.py  optuna_hybrid.py  pipeline_runner.py  real_optuna_hybrid.py  real_pipeline_runner.py
src/tamagawa_to_z/utils/: __init__.py  code_extract.py  geo.py  metrics.py
tests/: test_dataset_splitter.py  test_harmonizer.py  test_history_summarizer.py  test_inspector_agent.py  test_llm_layer.py  test_researcher_agent.py  test_root_cycle.py  test_tuning_llm_root.py  test_tuning_pipeline_runner.py
