[tool.poetry]
name = "tamagawa-to-z"
version = "0.1.0"
description = "アマゾン古河道・集落探索に向けた多言語トポニム × データ同化シミュレーション × マルチ‑エージェントフレームワーク"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "tamagawa_to_z", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.0"
pandas = "^2.0.0"
geopandas = "^0.13.0"
rasterio = "^1.3.7"
xarray = "^2023.1.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
sentence-transformers = "^2.2.2"
pyyaml = "^6.0"
hydra-core = "^1.3.2"
crewai = "^0.1.0"
langchain = "^0.0.267"
shapely = "^2.0.1"
pyproj = "^3.5.0"
scipy = "^1.10.1"
unidecode = "^1.3.6"
jupyter = "^1.0.0"
ipykernel = "^6.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.2"

[tool.poetry.scripts]
tamagawa-to-z = "tamagawa_to_z.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "rasterio.*",
    "sentence_transformers.*",
    "crewai.*",
    "langchain.*",
    "shapely.*",
    "unidecode.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
