[tool.poetry]
name = "tamagawa_to_z"
version = "0.1.0"
description = "アマゾン古河道・集落探索に向けた多言語トポニム × データ同化シミュレーション × マルチ‑エージェントフレームワーク"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "tamagawa_to_z", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.24.0"
pandas = "^2.0.0"
geopandas = "^0.14"
matplotlib = "^3.7.1"
shapely = "^2.0"
pyproj = {version = "^3.6", python = ">=3.10"}
unidecode = "^1.3.6"
jupyter = "^1.0.0"
ipykernel = "^6.22.0"
rasterstats = "^0.19"
contextily = "^1.4.0"
pyrosm = "^0.6.0"
pyarrow = "^20.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.2"

[tool.poetry.scripts]
tamagawa_to_z = "tamagawa_to_z.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "rasterio.*",
    "sentence_transformers.*",
    "crewai.*",
    "langchain.*",
    "shapely.*",
    "unidecode.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
