[tool.poetry]
name = "tamagawa_to_z"
version = "0.1.0"
description = "アマゾン古河道・集落探索に向けた多言語トポニム × データ同化シミュレーション × マルチ‑エージェントフレームワーク"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "tamagawa_to_z", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.24.0"
pandas = "^2.0.0"
geopandas = "^0.14"
matplotlib = "^3.7.1"
seaborn = "^0.12.0"
scipy = "^1.11.0"
shapely = "^2.0"
pyproj = {version = "^3.6", python = ">=3.10"}
unidecode = "^1.3.6"
jupyter = "^1.0.0"
ipykernel = "^6.22.0"
rasterstats = "^0.19"
gdal = "^3.8.0"
contextily = "^1.4.0"
pyrosm = "^0.6.0"
pyarrow = "^20.0.0"
openai = "^1.0.0"
sentence-transformers = "^2.2.0"
faiss-cpu = {version = "^1.7.0", optional = true}
scikit-learn = "^1.3.0"
geopy = "^2.3.0"
jsonschema = "^4.17.0"
python-dotenv = "^1.0.0"
prefect = "^3.0.0"
tqdm = "^4.66.0"
xarray = "^2023.0.0"
jinja2 = "^3.1.0"
ipywidgets = "^8.0.0"
# v2.0 Hybrid-BO dependencies
optuna = "^3.4.0"
diskcache = "^5.6.0"
typer = "^0.12.0"
pyyaml = "^6.0.0"

[tool.poetry.extras]
faiss = ["faiss-cpu"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.2"

[tool.poetry.scripts]
tamagawa_to_z = "tamagawa_to_z.cli:main"
# v2.0 Hybrid-BO scripts
run-split = "scripts.run_split:app"
run-optuna = "scripts.run_optuna:app"
run-best-params = "scripts.run_best_params:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "rasterio.*",
    "sentence_transformers.*",
    "crewai.*",
    "langchain.*",
    "shapely.*",
    "unidecode.*",
    "optuna.*",
    "diskcache.*",
    "typer.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
